--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,7 @@
         padding: 0;
       }
     </style>
+    <script src="https://kit.fontawesome.com/ef33cec68a.js" crossorigin="anonymous"></script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
